2007-07-10  Thiago M. Sayão <thiago.sayao@gmail.com> 

	* msnp-sharp/Util.cs, msnp-sharp/NS11MessageHandler.cs,
	  msnp-sharp/MSNPSharp.mdp, msnp-sharp/Messenger.cs,
	  msnp-sharp/Owner.cs, msnp-sharp/P2PDirectProcessor.cs,
	  msnp-sharp/SocketMessageProcessor.cs, msnp-sharp/QRYFactory.cs,
	  msnp-sharp/MSNSLPHandler.cs, msnp-sharp/P2PMessageSession.cs,
	  msnp-sharp/P2PTransferSession.cs, msnp-sharp/MSNObject.cs,
	  msnp-sharp/enums.cs, msnp-sharp/ContactList.cs,
	  msnp-sharp/PersonalMessage.cs, msnp-sharp/Contact.cs,
	  msnp-sharp/P2PHandler.cs, msnp-sharp/ContactGroupList.cs,
	  msnp-sharp/P2PMessage.cs: Bug Fixing and code cleanup. Thanks for
	  everybody that sent patches and bug reportings.

2007-06-10  Thiago Milczarek Sayão <thiago.sayao@gmail.com> 

	* msnp-sharp/P2PTransferSession.cs, msnp-sharp/MSNSLPHandler.cs: Fix
	  for MSN 7.0.. i feel cofused since WLM corrects the LocalIdentifier
	  by -3 after invite and MSN 7 does not. Since we support 7 for now,
	  don't correct -3

2007-06-10  Thiago Milczarek Sayão <thiago.sayao@gmail.com> 

	* msnp-sharp/NS11MessageHandler.cs: Login as MSNP8 MSNP9 MSNP11
	* msnp-sharp/P2PMessageSession.cs: RemoteIdentifier can repeat
	* msnp-sharp/MSNObject.cs: Fix bug #118791, cleanup
	* msnp-sharp/enums.cs: New Capacity

2007-06-05  Thiago Milczarek Sayão <thiago.sayao@gmail.com> 

	* msnp-sharp/NS11MessageHandler.cs: Default enconding? Let's try UTF8
	  :)
	* msnp-sharp/P2PDirectProcessor.cs, msnp-sharp/MSNSLPHandler.cs,
	  msnp-sharp/P2PMessageSession.cs, msnp-sharp/MSNSLPMessage.cs,
	  msnp-sharp/P2PHandler.cs, msnp-sharp/P2PMessage.cs: Fixing msn p2p
	  direct connection

2007-06-02  Thiago Milczarek Sayão <thiago.sayao@gmail.com> 

	* msnp-sharp/SBMSGMessage.cs, msnp-sharp/NS11MessageHandler.cs,
	  msnp-sharp/SocketMessageProcessor.cs,
	  msnp-sharp/SB11MessageHandler.cs, msnp-sharp/P2PMessageSession.cs,
	  msnp-sharp/MSNSLPHandler.cs, msnp-sharp/P2PTransferSession.cs,