@@ -1,4 +1,6 @@
 
+EXTRA_DIST =  
+
 #Warning: This is an automatically generated file, do not edit!
 if ENABLE_DEBUG
  SUBDIRS =  msnp-sharp Example ProxyServer UnitTest
@@ -6,5 +8,3 @@ endif
 if ENABLE_RELEASE
  SUBDIRS =  msnp-sharp Example ProxyServer UnitTest
 endif
-
-EXTRA_DIST =  
