@@ -1,15 +1,34 @@
-build_sources = $(addprefix $(srcdir)/, $(FILES) $(GENERATED_FILES))
-build_resources = $(addprefix $(srcdir)/, $(RESOURCES))
-build_resources_embed = $(foreach res,$(build_resources), $(addprefix -resource:,$(res)),$(RESOURCES_PREFIX)$(notdir $(res)))
+build_sources = $(FILES) $(GENERATED_FILES)
+build_sources_embed = $(build_sources:%='$(srcdir)/%')
+
+comma__=,
+build_resx_list = $(foreach res, $(RESOURCES), $(if $(filter %.resx, $(firstword $(subst $(comma__), ,$(res)))),$(res),))
+build_others_list = $(foreach res, $(RESOURCES), $(if $(filter %.resx, $(firstword $(subst $(comma__), ,$(res)))), ,$(res)))
+
+build_resx_files = $(foreach res, $(build_resx_list), $(firstword $(subst $(comma__), ,$(res))))
+build_resx_resources = $(build_resx_files:.resx=.resources)
+build_resx_resources_hack = $(subst .resx,.resources, $(build_resx_list))
+build_resx_resources_embed = $(build_resx_resources_hack:%='-resource:%')
+
+build_others_files = $(foreach res, $(build_others_list), $(firstword $(subst $(comma__), ,$(res))))
+build_others_resources = $(build_others_files)
+build_others_resources_embed = $(build_others_list:%='-resource:$(srcdir)/%')
+
+build_resources = $(build_resx_resources) $(build_others_resources)
+build_resources_embed = $(build_resx_resources_embed) $(build_others_resources_embed)
 
 build_references_ref = $(REFERENCES)
 build_references_ref += $(foreach ref, $(DLL_REFERENCES), -r:$(ref))
 build_references_ref += $(foreach ref, $(PROJECT_REFERENCES), -r:$(ref))
 
-EXTRA_DIST = $(FILES) $(GENERATED_FILES) $(RESOURCES) $(ASSEMBLY_WRAPPER_IN) $(EXTRAS) $(DATA_FILES)
-CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb $(BINARIES) 
-DISTCLEANFILES = $(GENERATED_FILES) $(pc_files)
+EXTRA_DIST += $(build_sources) $(build_resx_files) $(build_others_files) $(ASSEMBLY_WRAPPER_IN) $(EXTRAS) $(DATA_FILES)
+CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb $(BINARIES) $(build_resx_resources)
+DISTCLEANFILES = $(GENERATED_FILES) $(pc_files) $(BUILD_DIR)/*
 
 pkglib_SCRIPTS = $(ASSEMBLY)
 bin_SCRIPTS = $(BINARIES)
 
+programfilesdir = @prefix@/lib/@PACKAGE@
+programfiles_DATA = $(PROGRAMFILES)
+linuxpkgconfigdir = @prefix@/lib/pkgconfig
+linuxpkgconfig_DATA = $(LINUX_PKGCONFIG)
