@@ -1,4 +1,6 @@
 
+EXTRA_DIST = 
+
 # Warning: This is an automatically generated file, do not edit!
 
 if ENABLE_DEBUG
@@ -9,6 +11,7 @@ COMPILE_TARGET = library
 PROJECT_REFERENCES = 
 BUILD_DIR = ./bin/Debug/
 endif
+
 if ENABLE_RELEASE
 ASSEMBLY_COMPILER_COMMAND = mcs
 ASSEMBLY_COMPILER_FLAGS =  -noconfig -codepage:utf8 -warn:4
@@ -18,6 +21,7 @@ PROJECT_REFERENCES =
 BUILD_DIR = ./bin/Release/
 endif
 
+
 LINUX_PKGCONFIG = \
 	$(PROXYSERVER_PC)  
 
@@ -25,28 +29,28 @@ LINUX_PKGCONFIG = \
 all: $(ASSEMBLY) $(LINUX_PKGCONFIG) 
 
 FILES = \
-	./AssemblyInfo.cs \
-	./AuthBase.cs \
-	./AuthenticationList.cs \
-	./AuthNone.cs \
-	./AuthUserPass.cs \
-	./Client.cs \
-	./ConsoleAttributes.cs \
-	./FtpClient.cs \
-	./FtpDataConnection.cs \
-	./FtpListener.cs \
-	./HttpClient.cs \
-	./HttpListener.cs \
-	./Listener.cs \
-	./PortMapClient.cs \
-	./PortMapListener.cs \
-	./Proxy.cs \
-	./ProxyConfig.cs \
-	./Socks4Handler.cs \
-	./Socks5Handler.cs \
-	./SocksClient.cs \
-	./SocksHandler.cs \
-	./SocksListener.cs 
+	AssemblyInfo.cs \
+	AuthBase.cs \
+	AuthenticationList.cs \
+	AuthNone.cs \
+	AuthUserPass.cs \
+	Client.cs \
+	ConsoleAttributes.cs \
+	FtpClient.cs \
+	FtpDataConnection.cs \
+	FtpListener.cs \
+	HttpClient.cs \
+	HttpListener.cs \
+	Listener.cs \
+	PortMapClient.cs \
+	PortMapListener.cs \
+	Proxy.cs \
+	ProxyConfig.cs \
+	Socks4Handler.cs \
+	Socks5Handler.cs \
+	SocksClient.cs \
+	SocksHandler.cs \
+	SocksListener.cs 
 
 DATA_FILES = 
 
@@ -65,12 +69,15 @@ DLL_REFERENCES =
 PROXYSERVER_PC = $(BUILD_DIR)/proxyserver.pc
 $(PROXYSERVER_PC): proxyserver.pc
 	mkdir -p $(BUILD_DIR)
-	cp proxyserver.pc $(PROXYSERVER_PC)
+	cp '$<' '$@'
 
 
 
-$(ASSEMBLY) $(ASSEMBLY).mdb: $(build_sources) $(build_resources) $(build_datafiles) 
-	mkdir -p $(dir $(ASSEMBLY))		
-	$(ASSEMBLY_COMPILER_COMMAND) $(ASSEMBLY_COMPILER_FLAGS) -out:$@ -target:$(COMPILE_TARGET) $(build_sources) $(build_resources_embed) $(build_references_ref)
+$(build_resx_resources) : %.resources: %.resx
+	resgen '$<' '$@'
+
+$(ASSEMBLY) $(ASSEMBLY).mdb: $(build_sources) $(build_resources) $(build_datafiles) $(DLL_REFERENCES) $(PROJECT_REFERENCES)
+	mkdir -p $(dir $(ASSEMBLY))
+	$(ASSEMBLY_COMPILER_COMMAND) $(ASSEMBLY_COMPILER_FLAGS) -out:$@ -target:$(COMPILE_TARGET) $(build_sources_embed) $(build_resources_embed) $(build_references_ref)
 
 include $(top_srcdir)/Makefile.include
