@@ -1,4 +1,6 @@
 
+EXTRA_DIST = 
+
 # Warning: This is an automatically generated file, do not edit!
 
 if ENABLE_DEBUG
@@ -11,6 +13,7 @@ PROJECT_REFERENCES =  \
 	../msnp-sharp/bin/Debug/MSNPSharp.dll
 BUILD_DIR = ./bin/Debug/
 endif
+
 if ENABLE_RELEASE
 ASSEMBLY_COMPILER_COMMAND = gmcs
 ASSEMBLY_COMPILER_FLAGS =  -noconfig -codepage:utf8 -warn:4
@@ -18,9 +21,10 @@ ASSEMBLY = ./bin/Release/NUNit2.dll
 COMPILE_TARGET = library
 PROJECT_REFERENCES =  \
 	../ProxyServer/bin/Release/ProxyServer.dll \
-	../msnp-sharp/bin/Release/MSNPSharp.dll
+	../msnp-sharp/bin/Debug/MSNPSharp.dll
 BUILD_DIR = ./bin/Release/
 endif
+
 
 PROGRAMFILES = \
 	$(PROXYSERVER_DLL) \
@@ -33,13 +37,13 @@ LINUX_PKGCONFIG = \
 all: $(ASSEMBLY) $(PROGRAMFILES) $(LINUX_PKGCONFIG) 
 
 FILES = \
-	./DataTransferTests.cs \
-	./MobileMessage.cs \
-	./NameserverTests.cs \
-	./ProxyConnection.cs \
-	./SerializableTest.cs \
-	./SwitchboardTests.cs \
-	./TestBase.cs 
+	DataTransferTests.cs \
+	MobileMessage.cs \
+	NameserverTests.cs \
+	ProxyConnection.cs \
+	SerializableTest.cs \
+	SwitchboardTests.cs \
+	TestBase.cs 
 
 DATA_FILES = 
 
@@ -49,7 +53,7 @@ EXTRAS = \
 	./msnp-sharp-nunit.pc.in 
 
 REFERENCES =  \
-	$(NUNIT_LIBS) \
+	$(MONO_NUNIT_LIBS) \
 	-r:System \
 	-r:System.Data \
 	-r:System.Xml \
@@ -58,29 +62,32 @@ REFERENCES =  \
 DLL_REFERENCES = 
 
 PROXYSERVER_DLL = $(BUILD_DIR)/ProxyServer.dll
-$(PROXYSERVER_DLL): $(top_builddir)/ProxyServer/bin/Release/ProxyServer.dll
+$(PROXYSERVER_DLL): ../ProxyServer/bin/Debug/ProxyServer.dll
 	mkdir -p $(BUILD_DIR)
-	cp $(top_builddir)/ProxyServer/bin/Release/ProxyServer.dll $(PROXYSERVER_DLL)
+	cp '$<' '$@'
 
 MSNPSHARP_DLL = $(BUILD_DIR)/MSNPSharp.dll
-$(MSNPSHARP_DLL): $(top_builddir)/msnp-sharp/bin/Debug/MSNPSharp.dll
+$(MSNPSHARP_DLL): ../msnp-sharp/bin/Debug/MSNPSharp.dll
 	mkdir -p $(BUILD_DIR)
-	cp $(top_builddir)/msnp-sharp/bin/Debug/MSNPSharp.dll $(MSNPSHARP_DLL)
+	cp '$<' '$@'
 
 MSNPSHARP_DLL_MDB = $(BUILD_DIR)/MSNPSharp.dll.mdb
-$(MSNPSHARP_DLL_MDB): $(top_builddir)/msnp-sharp/bin/Debug/MSNPSharp.dll.mdb
+$(MSNPSHARP_DLL_MDB): ../msnp-sharp/bin/Debug/MSNPSharp.dll.mdb
 	mkdir -p $(BUILD_DIR)
-	cp $(top_builddir)/msnp-sharp/bin/Debug/MSNPSharp.dll.mdb $(MSNPSHARP_DLL_MDB)
+	cp '$<' '$@'
 
 MSNP_SHARP_NUNIT_PC = $(BUILD_DIR)/msnp-sharp-nunit.pc
 $(MSNP_SHARP_NUNIT_PC): msnp-sharp-nunit.pc
 	mkdir -p $(BUILD_DIR)
-	cp msnp-sharp-nunit.pc $(MSNP_SHARP_NUNIT_PC)
+	cp '$<' '$@'
 
 
 
-$(ASSEMBLY) $(ASSEMBLY).mdb: $(build_sources) $(build_resources) $(build_datafiles) 
-	mkdir -p $(dir $(ASSEMBLY))		
-	$(ASSEMBLY_COMPILER_COMMAND) $(ASSEMBLY_COMPILER_FLAGS) -out:$@ -target:$(COMPILE_TARGET) $(build_sources) $(build_resources_embed) $(build_references_ref)
+$(build_resx_resources) : %.resources: %.resx
+	resgen2 '$<' '$@'
+
+$(ASSEMBLY) $(ASSEMBLY).mdb: $(build_sources) $(build_resources) $(build_datafiles) $(DLL_REFERENCES) $(PROJECT_REFERENCES)
+	mkdir -p $(dir $(ASSEMBLY))
+	$(ASSEMBLY_COMPILER_COMMAND) $(ASSEMBLY_COMPILER_FLAGS) -out:$@ -target:$(COMPILE_TARGET) $(build_sources_embed) $(build_resources_embed) $(build_references_ref)
 
 include $(top_srcdir)/Makefile.include
