@@ -12,13 +12,22 @@ fi
 
 AC_PROG_INSTALL
 
+AC_PATH_PROG(MCS, mcs, no)
+if test "x$MCS" = "xno"; then
+        AC_MSG_ERROR([mcs Not found])
+fi
+AC_PATH_PROG(GMCS, gmcs, no)
+if test "x$GMCS" = "xno"; then
+        AC_MSG_ERROR([gmcs Not found])
+fi
 
 
+PKG_CHECK_MODULES([MONO_NUNIT], [mono-nunit])
 
 
 AC_ARG_ENABLE(debug,
 	AC_HELP_STRING([--enable-debug],
-		[Use 'Debug' Configuration [default=NO]]),
+		[Use 'DEBUG' Configuration [default=YES]]),
 		enable_debug=yes, enable_debug=no)
 AM_CONDITIONAL(ENABLE_DEBUG, test x$enable_debug = xyes)
 if test "x$enable_debug" = "xyes" ; then
@@ -26,19 +35,27 @@ if test "x$enable_debug" = "xyes" ; then
 fi
 AC_ARG_ENABLE(release,
 	AC_HELP_STRING([--enable-release],
-		[Use 'Release' Configuration [default=YES]]),
+		[Use 'RELEASE' Configuration [default=NO]]),
 		enable_release=yes, enable_release=no)
 AM_CONDITIONAL(ENABLE_RELEASE, test x$enable_release = xyes)
 if test "x$enable_release" = "xyes" ; then
 	CONFIG_REQUESTED="yes"
 fi
 if test -z "$CONFIG_REQUESTED" ; then
-	AM_CONDITIONAL(ENABLE_RELEASE, true)
+	AM_CONDITIONAL(ENABLE_DEBUG, true)
 fi
 
 
 AC_CONFIG_FILES([
-./Makefile
+ProxyServer/Makefile
+UnitTest/msnp-sharp-nunit.pc
+UnitTest/Makefile
+msnp-sharp/Makefile
+Example/Makefile
+Example/msnp-sharp-client
+Makefile
+ProxyServer/proxyserver.pc
+msnp-sharp/msnp-sharp.pc
 
 ])
 
